[fix pathern path]